Add functions and variables for implementation of FT
