# core/model/diagnostic.go
@@ -1,14 +1,19 @@
 package model
 
 type TCDumpRequest struct {
-	Token   string
-	BlockID string
+	Token   string `json:"token"`
+	BlockID string `json:"block_id"`
 }
 
 type TCDumpReply struct {
 	BasicResponse
 	NextBlockID string   `json:"next_block_id"`
 	Blocks      [][]byte `json:"blocks"`
+}
+
+type GetFTTokenChainReply struct {
+	BasicResponse
+	TokenChainData []interface{}
 }
 
 type SmartContractTokenChainDataReq struct {
