# docs/swagger.json
@@ -175,6 +175,40 @@
                 }
             }
         },
+        "/api/create-ft": {
+            "post": {
+                "description": "This API endpoint will create FTs.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "FT"
+                ],
+                "summary": "Create FT",
+                "parameters": [
+                    {
+                        "description": "Create FT",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/server.CreateFTReqSwaggoInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.BasicResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/create-nft": {
             "post": {
                 "description": "This API will create new NFT",
@@ -293,7 +327,7 @@
         },
         "/api/execute-nft": {
             "post": {
-                "description": "This API will add a new block which indicates the transfer of ownership of NFT",
+                "description": "This API will add a new block which indicates either transfer of ownership of NFT or internal state change through self-execution",
                 "consumes": [
                     "application/json"
                 ],
@@ -306,7 +340,7 @@
                 "summary": "Execution of NFT",
                 "parameters": [
                     {
-                        "description": "Transfer the ownership of particular NFT or self-execution with some data",
+                        "description": "Transfer the ownership of particular NFT or self-execution with some data if 'receiver' is empty ",
                         "name": "input",
                         "in": "body",
                         "required": true,
@@ -648,6 +682,70 @@
                 }
             }
         },
+        "/api/get-ft-info-by-did": {
+            "get": {
+                "description": "This API endpoint retrieves the names and count of FTs of a given DID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "FT"
+                ],
+                "summary": "Get FT balance information for a given DID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User DID",
+                        "name": "did",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.GetFTInfo"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/get-ft-token-chain": {
+            "get": {
+                "description": "This API returns FT token chain data for a given FT token ID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "FT"
+                ],
+                "summary": "Get FT Token Chain Data",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "FT Token ID",
+                        "name": "tokenID",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response with token chain data",
+                        "schema": {
+                            "$ref": "#/definitions/model.GetFTTokenChainReply"
+                        }
+                    }
+                }
+            }
+        },
         "/api/get-nft-token-chain-data": {
             "get": {
                 "description": "This API will return nft token chain data",
@@ -729,6 +827,40 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/server.GetSmartContractTokenChainDataSwaggoInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.BasicResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/initiate-ft-tranfer": {
+            "post": {
+                "description": "This API endpoint will initiate transfer of FTs.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "FT"
+                ],
+                "summary": "Initiate an FT transfer",
+                "parameters": [
+                    {
+                        "description": "Transfer FT",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/server.TransferFTReqSwaggoInput"
                         }
                     }
                 ],
@@ -1105,6 +1237,54 @@
                 }
             }
         },
+        "model.FTInfo": {
+            "type": "object",
+            "properties": {
+                "creator_did": {
+                    "type": "string"
+                },
+                "ft_count": {
+                    "type": "integer"
+                },
+                "ft_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.GetFTInfo": {
+            "type": "object",
+            "properties": {
+                "ft_info": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.FTInfo"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                },
+                "result": {},
+                "status": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "model.GetFTTokenChainReply": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "result": {},
+                "status": {
+                    "type": "boolean"
+                },
+                "tokenChainData": {
+                    "type": "array",
+                    "items": {}
+                }
+            }
+        },
         "model.PledgedTokenStateDetails": {
             "type": "object",
             "properties": {
@@ -1166,6 +1346,23 @@
                     "items": {
                         "$ref": "#/definitions/model.TransactionCount"
                     }
+                }
+            }
+        },
+        "server.CreateFTReqSwaggoInput": {
+            "type": "object",
+            "properties": {
+                "did": {
+                    "type": "string"
+                },
+                "ftcount": {
+                    "type": "integer"
+                },
+                "ftname": {
+                    "type": "string"
+                },
+                "tokencount": {
+                    "type": "number"
                 }
             }
         },
@@ -1380,6 +1577,35 @@
                 },
                 "password": {
                     "type": "string"
+                }
+            }
+        },
+        "server.TransferFTReqSwaggoInput": {
+            "type": "object",
+            "properties": {
+                "FTCount": {
+                    "type": "integer"
+                },
+                "FTName": {
+                    "type": "string"
+                },
+                "comment": {
+                    "type": "string"
+                },
+                "creatorDID": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "receiver": {
+                    "type": "string"
+                },
+                "sender": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "integer"
                 }
             }
         }
